Use https repo for maven

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ application {
 repositories {
     mavenLocal()
     maven {
-        url = 'http://repo.maven.apache.org/maven2'
+        url = 'https://repo.maven.apache.org/maven2'
     }
 }
 
