--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,11 @@ repositories {
 }
 
 dependencies {
-    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.16.1'
-    compile 'fr.inria.gforge.spoon:spoon-core:8.1.0'
+    compile 'fr.inria.gforge.spoon:spoon-core:8.3.0-beta-8'
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'commons-cli:commons-cli:1.4'
+    compile 'org.slf4j:slf4j-api:1.7.30'
+    compile 'org.slf4j:slf4j-nop:1.7.30'
 }
 
 group = 'com.sourcegraph'
