--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.16.1'
     compile 'fr.inria.gforge.spoon:spoon-core:8.3.0-beta-8'
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'commons-cli:commons-cli:1.4'
