--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.10'
 }
 
 repositories {
@@ -23,6 +24,7 @@ dependencies {
     implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.9.0'
     implementation 'com.google.guava:guava:29.0-jre'
     testImplementation 'junit:junit:4.13'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 application {
