--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ plugins {
 repositories {
     jcenter()
     mavenLocal()
-    maven {
-        url = 'https://repo.maven.apache.org/maven2'
-    }
+    maven { url = 'https://repo.maven.apache.org/maven2' }
+    maven { url = 'https://repo.gradle.org/gradle/libs-releases' }
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile files("${System.getProperty('java.home')}/../lib/tools.jar")
     compile 'com.google.code.gson:gson:2.8.6'
     compile 'commons-cli:commons-cli:1.4'
@@ -23,8 +23,9 @@ dependencies {
     compile 'org.slf4j:slf4j-nop:1.7.30'
     implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.9.0'
     implementation 'com.google.guava:guava:29.0-jre'
+    implementation "org.gradle:gradle-tooling-api:6.6.1"
+
     testImplementation 'junit:junit:4.13'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 application {
