Downloading of dependency sources with gradle idea plugin+task

--- a/src/main/resources/projectClasspathFinder.gradle
+++ b/src/main/resources/projectClasspathFinder.gradle
@@ -1,4 +1,11 @@
 allprojects { project ->
+    apply plugin: 'idea'
+    idea {
+        module {
+            downloadSources = true
+        }
+    }
+
     task lsifjavaAllGradleDeps {
         doLast {
             if (project.hasProperty('android')) {
