--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ task fatJar(type: Jar) {
         exclude "META-INF/*.SF"
         exclude "META-INF/*.DSA"
         exclude "META-INF/*.RSA"
+        exclude "about.html"
     }
     with jar
 }
