Add sbt build and new snapshot testing infrastructure

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,53 @@
+*.class
+*.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.bloop
+
+_site/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
 .idea
-target
-**/spoon.classpath*.tmp
-.classpath
-*.project
-.settings
-*.iml
-.gradle
-examples/**/dump.lsif
-build
+
+# ENSIME specific
+.ensime_cache/
+.ensime
+
+.metals/
+metals.sbt
+metals/project/
+
+.vscode/
+
+local.*
+
+.DS_Store
+
+node_modules
+
+lib/core/metadata.js
+lib/core/MetadataBlog.js
+
+website/translated_docs
+website/build/
+website/yarn.lock
+website/node_modules
+website/i18n/*
+
+project/metals.sbt
+out/
+*.hnir
+test-report.json
+dump.lsif
