Add lsif-java command-line tool with Gradle and Maven support.
Previously, users needed to add manual configuration to their
Gradle/Maven builds in order to use lsif-java. Now, users can run the
new `lsif-java` command-line tool to automatically produce LSIF.

In order to automatically produce LSIF, `lsif-java` needs to compile all
the Java sources with an additional Java compiler options
`-Xplugin:semanticdb`. Most build tools support a way to add custom
compiler options but that typically requires updating build
configuration files such as `pom.xml` for Maven and `build.gradle` for
Gradle. However, we want to avoid updating build configuration files.

The exact solution to update the compilation options varies between
build tools:

* Maven: you can customize the `javac` executable through the
  command-line flag `mvn -Dmaven.compiler.executable=PATH compile`
* Gradle: you can pass in a custom Gradle script via
  `gradle --init-script=PATH`, which allows you to query information out
  of the build and configure settings. By default, `lsif-java` will try
  to configure the build to use a custom `javac` script similar to
  Maven. However, this approach does not work for Gradle builds that use
  the the newly released "Java toolchains" feature.  For such builds, we
  can provide a custom `java` binary that registers a custom Java agent
  that ensures that Gradle always enabled the required
  `-Xplugin:semanticdb` flag.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: olafurpg/setup-scala@v10
         with:
           java-version: adopt@1.11
+      - run: go get github.com/sourcegraph/lsif-semanticdb/cmd/lsif-semanticdb
       - run: sbt test
   check:
     runs-on: ubuntu-latest
