Use actions/setup-go in CI.
The `lsif-semanticdb` binary was not available on PATH.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,9 @@ jobs:
       - uses: olafurpg/setup-scala@v10
         with:
           java-version: adopt@1.11
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.13.1'
       - run: go get github.com/sourcegraph/lsif-semanticdb/cmd/lsif-semanticdb
       - run: sbt test
   check:
