--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -26,6 +26,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v10
+      - uses: actions/setup-go@v2
+        with:
+          go-version: '^1.13.1'
+      - run: go get github.com/sourcegraph/lsif-semanticdb/cmd/lsif-semanticdb
       - run: git fetch --tags || true
       - name: sbt nativeImage
         shell: bash
