Add documentation website
Previously, lsif-java didn't have any documentation for end-users. We
only had documentation for contributors. This commit adds a website that
includes user-facing documentation on how to run lsif-java with
automatic indexing and manual indexing.

--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -30,7 +30,7 @@ jobs:
       - name: sbt nativeImage
         shell: bash
         run: |
-          sbt cli/nativeImage "cli/nativeImageRun --cwd tests/gradle-example"
+          sbt cli/nativeImage "cli/nativeImageRun --cwd tests/gradle-example index"
       - uses: actions/upload-artifact@master
         with:
           path: ${{ matrix.local_path }}
