--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macOS-latest, ubuntu-latest, windows-latest]
+        os: [macOS-latest, ubuntu-latest]
         include:
           - os: macOS-latest
             uploaded_filename: lsif-java-x86_64-apple-darwin
@@ -19,9 +19,6 @@ jobs:
           - os: ubuntu-latest
             uploaded_filename: lsif-java-x86_64-pc-linux
             local_path: cli/target/native-image/lsif-java
-          - os: windows-latest
-            uploaded_filename: lsif-java-x86_64-pc-win32.exe
-            local_path: cli\target\native-image\lsif-java.exe
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v10
