--- a/.github/workflows/mdoc.yml
+++ b/.github/workflows/mdoc.yml
@@ -1,7 +1,7 @@
 name: Website
 on:
   push:
-    branches: [master, documentation-website]
+    branches: [main]
     tags: ["*"]
 jobs:
   publish:
