--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -30,7 +30,7 @@ jobs:
       - name: sbt nativeImage
         shell: bash
         run: |
-          sbt cli/nativeImage "cli/nativeImageRun --cwd tests/gradle-example index"
+          sbt cli/nativeImage "cli/nativeImageRun index --cwd tests/gradle-example"
       - uses: actions/upload-artifact@master
         with:
           path: ${{ matrix.local_path }}
