--- a/.github/workflows/native.yml
+++ b/.github/workflows/native.yml
@@ -21,12 +21,13 @@ jobs:
             local_path: cli/target/native-image/lsif-java
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: olafurpg/setup-scala@v10
       - uses: actions/setup-go@v2
         with:
           go-version: "^1.13.1"
       - run: go get github.com/sourcegraph/lsif-semanticdb/cmd/lsif-semanticdb
-      - run: git fetch --tags || true
       - name: sbt nativeImage
         shell: bash
         run: |
