--- a/auto-indexing/Dockerfile
+++ b/auto-indexing/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get install --yes maven npm
 RUN curl -fLo /coursier https://git.io/coursier-cli
 RUN chmod +x /coursier
 RUN apt-get install --yes yarn
-RUN /coursier launch --contrib lsif-java -- --help
+RUN /coursier launch --contrib --ttl 0 lsif-java -- --help
