Update auto-indexing docker image
Installs the correct `yarn` binary. Previously, it did `apt-get install yarn`,
which installs some other `yarn` tool that is not the JavaScript
`yarn` tool it was supposed to install.

--- a/auto-indexing/Dockerfile
+++ b/auto-indexing/Dockerfile
@@ -3,5 +3,5 @@ RUN apt-get update
 RUN apt-get install --yes maven npm
 RUN curl -fLo /coursier https://git.io/coursier-cli
 RUN chmod +x /coursier
-RUN apt-get install --yes yarn
+RUN npm install --global yarn
 RUN /coursier launch --contrib --ttl 0 lsif-java -- --help
