--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,6 @@ FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends default-jdk gradle maven golang-go \
-    && go get github.com/sourcegraph/lsif-semanticdb/cmd/lsif-semanticdb
+    && apt-get -y install --no-install-recommends default-jdk gradle maven
 
 
