Run CI on Windows
Previously, we didn't test lsif-java on Windows resulting in bugs like
https://github.com/sourcegraph/lsif-java/issues/422. This commit adds a
build matrix to our CI job and fixes path escaping logic so that it
should work correctly on Windows.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,11 @@ on:
   pull_request:
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on:  ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [windows-latest, ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v13
