--- a/.github/workflows/sourcegraph.yml
+++ b/.github/workflows/sourcegraph.yml
@@ -3,24 +3,30 @@ on:
   push:
     branches:
       - main
-      - olafurpg/lets-go
-    pull_request:
+
+  pull_request:
+
 jobs:
   scip:
     runs-on: ubuntu-latest
     name: "Upload SCIP"
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v13
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 8
+          cache: 'sbt'
+
       - uses: actions/setup-go@v2
         with:
           go-version: "1.15.6"
+
+      - name: Install src
+        run: yarn global add @sourcegraph/src
+
       - name: sbt sourcegraphUpload
-        run: |
-          mkdir -p bin
-          curl -L https://sourcegraph.com/.api/src-cli/src_linux_amd64 -o bin/src
-          chmod +x bin/src
-          export PATH="$PATH:$PWD/bin"
-          sbt sourcegraphUpload
+        run: sbt sourcegraphUpload
+
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
