Ensure that the docker build works in CI
We had failing CI release jobs because the docker build was no longer
working. This extra step should make sure that the Docker build doesn't
regress in the future.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          cache: 'sbt'
+          distribution: "temurin"
+          cache: "sbt"
           java-version: ${{ matrix.java }}
       - run: sbt test
   bazel:
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: "temurin"
           java-version: 17
-          cache: 'sbt'
-      - run: sbt checkAll
+          cache: "sbt"
+      - run: sbt checkAll cli/docker
