--- a/scip-semanticdb/BUILD
+++ b/scip-semanticdb/BUILD
@@ -18,6 +18,7 @@ java_library(
     srcs = glob(["src/main/java/**/*.java"]),
     deps = [
         ":all_java_proto",
+        "//scip-java-proto/src/main/protobuf:scip_java_proto",
         "//semanticdb-java",
         "//semanticdb-java/src/main/protobuf:semanticdb_java_proto",
         "@maven//:com_google_protobuf_protobuf_java",
