--- a/.github/workflows/sourcegraph.yml
+++ b/.github/workflows/sourcegraph.yml
@@ -12,6 +12,9 @@ jobs:
     name: "Upload SCIP"
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
