Publish CLI locally and use that version in the sbt-sourcegraph run (#559)

--- a/.github/workflows/sourcegraph.yml
+++ b/.github/workflows/sourcegraph.yml
@@ -1,10 +1,10 @@
 name: Sourcegraph
 on:
   push:
-    branches:
-      - main
-
+    branches: ["main"]
+    tags: ["v*"]
   pull_request:
+    branches: ["*"]
 
 jobs:
   scip:
@@ -12,17 +12,34 @@ jobs:
     name: "Upload SCIP"
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 8
           cache: 'sbt'
 
+      - name: Publish CLI locally
+        run: sbt publishLocal dumpScipJavaVersion
+
+      - name: Produce SCIP data of scip-java repository
+        run: sbt -Dscip-java-version=$(cat VERSION) sourcegraphCompile
+
+      - name: Upload index.scip
+        uses: actions/upload-artifact@master
+        with:
+          path: target/sbt-sourcegraph/index.scip
+          name: index.scip
+          if-no-files-found: error
+
       - name: Install src
+        if: startsWith(github.ref, 'refs/tags/v') || (github.ref == 'refs/heads/main')
         run: yarn global add @sourcegraph/src
 
-      - name: sbt sourcegraphUpload
-        run: sbt sourcegraphUpload
-
+      - name: Upload sourcegraph data
+        if: startsWith(github.ref, 'refs/tags/v') || (github.ref == 'refs/heads/main')
+        run: sbt -Dscip-java-version=$(cat VERSION) sourcegraphUpload
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
