Add explicit JSR 305 dependency for Bazel build
Needed to use `Nullable` annotation

--- a/scip-semanticdb/BUILD
+++ b/scip-semanticdb/BUILD
@@ -21,6 +21,7 @@ java_library(
         "//scip-java-proto/src/main/protobuf:scip_java_proto",
         "//semanticdb-java",
         "//semanticdb-java/src/main/protobuf:semanticdb_java_proto",
+        "@maven//:com_google_code_findbugs_jsr305",
         "@maven//:com_google_protobuf_protobuf_java",
         "@maven//:com_google_protobuf_protobuf_java_util",
     ],
