--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
           distribution: "temurin"
           cache: "sbt"
           java-version: ${{ matrix.java }}
+      - name: Gradle plugin tests 
+        run: cd semanticdb-gradle-plugin && gradle :plugin:functionalTest
+      - name: Main project tests
       - run: sbt test
   bazel:
     runs-on: ubuntu-latest
