--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         # NOTE(olafurpg) Windows is not enabled because it times out due to reasons I don't understand.
         # os: [windows-latest, ubuntu-latest]
         os: [ubuntu-latest]
-        java: [17]
+        java: [8, 11, 17]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
@@ -22,7 +22,7 @@ jobs:
           cache: "sbt"
           java-version: ${{ matrix.java }}
       - name: Main project tests
-        run: sbt 'buildTools/testOnly tests.GradleBuildToolSuite -- *explicit-gradle6.7'
+        run: sbt test
   bazel:
     runs-on: ubuntu-latest
     steps:
