--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,14 +44,14 @@ jobs:
         run: sbt cli/docker
 
       - run: |
-          gh repo clone scalameta/munit
-          gh repo clone circe/circe
+          git clone https://github.com/scalameta/munit.git
+          git clone https://github.com/circe/circe.git
 
-          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest index
-          file index.scip || (echo "index.scip doesn't exist!"; exit 1) 
+          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest index --cwd munit
+          file munit/index.scip || (echo "munit SCIP index doesn't exist!"; exit 1) 
           
-          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest index
-          file index.scip || (echo "index.scip doesn't exist!"; exit 1) 
+          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest index --cwd circe
+          file circe/index.scip || (echo "circe SCIP index doesn't exist!"; exit 1) 
 
 
   bazel:
