--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,10 @@ jobs:
           git clone https://github.com/scalameta/munit.git
           git clone https://github.com/circe/circe.git
 
-          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest index --cwd munit
+          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest scip-java index --cwd munit
           file munit/index.scip || (echo "munit SCIP index doesn't exist!"; exit 1) 
           
-          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest index --cwd circe
+          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest scip-java index --cwd circe
           file circe/index.scip || (echo "circe SCIP index doesn't exist!"; exit 1) 
 
 
