--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,11 @@ jobs:
         run: sbt cli/docker
 
       - run: |
-          git clone https://github.com/scalameta/mdoc.git
+          git clone https://github.com/typelevel/case-insensitive.git
           git clone https://github.com/circe/circe.git
 
-          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest scip-java index --cwd mdoc
-          file mdoc/index.scip || (echo "mdoc SCIP index doesn't exist!"; exit 1) 
+          docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest scip-java index --cwd case-insensitive
+          file case-insensitive/index.scip || (echo "mdoc SCIP index doesn't exist!"; exit 1) 
           
           docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest scip-java index --cwd circe
           file circe/index.scip || (echo "circe SCIP index doesn't exist!"; exit 1) 
