--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         # NOTE(olafurpg) Windows is not enabled because it times out due to reasons I don't understand.
         # os: [windows-latest, ubuntu-latest]
         os: [ubuntu-latest]
-        java: [8, 17]
+        java: [8, 11, 17]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
@@ -22,7 +22,8 @@ jobs:
           distribution: "temurin"
           cache: "sbt"
           java-version: ${{ matrix.java }}
-      - run: sbt test
+      - name: Main project tests
+        run: sbt test
 
   docker_test:
     runs-on: ${{ matrix.os }}
@@ -48,7 +49,6 @@ jobs:
 
           docker run -v $PWD:/sources -w /sources sourcegraph/scip-java:latest scip-java index --cwd circe
           file circe/index.scip || (echo "circe SCIP index doesn't exist!"; exit 1) 
-
 
   bazel:
     runs-on: ubuntu-latest
