--- a/examples/bazel-example/WORKSPACE
+++ b/examples/bazel-example/WORKSPACE
@@ -69,7 +69,9 @@ maven_install(
     artifacts = [
         "com.google.protobuf:protobuf-java:3.15.6", # Required dependency by scip-java.
         "com.google.protobuf:protobuf-java-util:3.15.6", # Required dependency by scip-java.
-        "com.google.guava:guava:31.0-jre", # Not required dependency, only used by tests.
+        # These dependencies are only required for the tests
+        "com.google.guava:guava:31.0-jre", 
+        "com.google.auto.value:auto-value:1.5.3",
     ],
     repositories = [
          "https://repo1.maven.org/maven2",
