--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,3 +6,6 @@ project.git = true
 align.preset = none
 align.stripMargin = true
 newlines.source=unfold
+project.excludeFilters = [
+  "tests/snapshots/src/main/generated"
+]
