Bazel aspects: allow sharing source jars and allow empty sourcejars (#757)
* Use labelname when declaring output for unzipped sourcejar
* Handle empty source jars

--- a/examples/bazel-example/src/main/java/srcjar_example/BUILD
+++ b/examples/bazel-example/src/main/java/srcjar_example/BUILD
@@ -4,10 +4,25 @@ genrule(
     cmd = "echo 'package com.testing; public class Bar {};' > Bar.java && jar cf $(@) Bar.java",
 )
 
+genrule(
+    name = "empty-srcjar",
+    outs = ["empty.srcjar"],
+    cmd = "touch test.txt && zip $(@) test.txt && zip -d $(@) test.txt",
+)
+
 java_library(
     name = "testing",
     srcs = [
         "Foo.java",
+        ":generated-srcjar",
+        ":empty-srcjar"
+    ],
+)
+
+java_library(
+    name = "other_library",
+    srcs = [
+        "Baz.java", # create a new file in source at test/Baz.java, alongside test/Foo.java
         ":generated-srcjar",
     ],
 )
