--- a/.github/workflows/community-build.yml
+++ b/.github/workflows/community-build.yml
@@ -4,6 +4,14 @@ on:
     branches: [main]
     tags: ["*"]
   pull_request:
+  workflow_dispatch:
+    inputs:
+      scipJavaVersion:
+        description: 'Version of bindgen to run (if empty, main branch will be republished)'
+        required: false
+        default: ''
+        type: string
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,7 +30,7 @@ jobs:
       - run: sbt cli/pack
 
       - run: |
-          cd scip-java/target/pack && zip -r scip-java.zip .
+          cd scip-java/target/pack && zip -r ../../../scip-java.zip .
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
