--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,5 @@
-version = "2.7.5"
+version = "3.9.8"
+runner.dialect = scala213source3
 assumeStandardLibraryStripMargin = true
 docstrings.style = Asterisk
 docstrings.wrap = "yes"
