Upgrade sbt-docker from 1.9.0 to 1.11.0
Fixes Docker CLI test CI failure caused by newer Docker Engine / BuildKit
no longer printing 'Successfully built <id>', which sbt-docker's regex
couldn't parse (DockerBuildException: Could not parse Docker image id).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - uses: sbt/setup-sbt@v1
 
       - name: Build Dockerised CLI
-        run: sbt cli/docker
+        run: DOCKER_BUILDKIT=0 sbt cli/docker
 
       - name: Test repos
         shell: bash
@@ -172,4 +172,3 @@ jobs:
 
       - run: du -h index.scip
         working-directory: examples/maven-example
-
