--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -23,4 +23,4 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - run: sbt cli/dockerBuildAndPush
+      - run: DOCKER_BUILDKIT=0 sbt cli/dockerBuildAndPush
